--- a/blog.html
+++ b/blog.html
@@ -62,7 +62,28 @@
         <div class="container-fluid seccion1 py-5 my-4">
         <img src="img/index/fondo6.jpg" width="100%">
         </div>
-        
+        <!--Un artista a corazon abierto-->
+        <section class="container py-5 seccion2 " style="text-align: center;">
+            <h6 style="text-align: right;">14 - noviembre - 2022</h6>
+            <br>
+            <h2>ARTISTA A CORAZON ABIERTO</h2>
+            <br>
+            <div class="row justify-content-center pt-3">
+                <div class="col-lg-8 col-md-4 col-sm-4">
+                  <p>
+                    Actualmente soy estudiante de artes digitales, pero desde muy pequeña
+                    siempre me he sentido atraida por la fotografía,  y ahora que estoy estudiando
+                    la universida mi mayor campo de interes es el mismo, la fotografía.
+                  </p>
+                  <p>
+                    Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
+                    esta página podras ver un poco más de mis trabajos.
+                  </p>
+                </div>
+            </div>
+
+        </section>
+
         <!--Un paquete para ti-->
         <section class="container py-5 seccion2" style="text-align: center;">
         <h2>UN PAQUETE PARA TI</h2>
