--- a/blog.html
+++ b/blog.html
@@ -71,9 +71,7 @@
             <div class="row justify-content-center pt-3">
                 <div class="col-lg-8 col-md-4 col-sm-4">
                   <p>
-                    Actualmente soy estudiante de artes digitales, pero desde muy pequeña
-                    siempre me he sentido atraida por la fotografía,  y ahora que estoy estudiando
-                    la universida mi mayor campo de interes es el mismo, la fotografía.
+                   Cuando 
                   </p>
                   <p>
                     Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
