--- a/proyectos.html
+++ b/proyectos.html
@@ -70,7 +70,7 @@
       </h2>
       <div class="row justify-content-center py-3">
         <div class="col-lg-8 col-md-4 col-sm-4">
-          <p>
+          <p style="text-align: justify;">
             Hace un tiempo para la materia de "temas selectos de artes digitales" con la Dra. Natalia Gurieva,
             realicé este proyecto, para que sepas de que se trata, aquí te platico un  poco más al respecto.
           </p>
