--- a/blog.html
+++ b/blog.html
@@ -63,15 +63,17 @@
         <img src="img/index/fondo6.jpg" width="100%">
         </div>
         <!--Un artista a corazon abierto-->
-        <section class="container py-5 seccion2 " style="text-align: center;">
+        <section class="container py-5 seccion2 " style="text-align: justify;">
             <h6 style="text-align: right;">14 - noviembre - 2022</h6>
             <br>
-            <h2>ARTISTA A CORAZON ABIERTO</h2>
+            <h2 style="text-align: center;">ARTISTA A CORAZON ABIERTO</h2>
             <br>
             <div class="row justify-content-center pt-3">
                 <div class="col-lg-8 col-md-4 col-sm-4">
                   <p>
-                   Cuando 
+                   Todos los artistas, de practicamente todos los ambitos, trabajamos con los sentimientos a
+                   flor de piel, cuando un artista realiza una obra, en general, su obra no es solo material o
+                   digital, la obra de un artista, suele tener alma.
                   </p>
                   <p>
                     Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
