--- a/proyectos.html
+++ b/proyectos.html
@@ -83,7 +83,7 @@
 
       <div class="row justify-content-center align-items-center py-3">
         <div class="col-lg-9 col-md-4 col-sm-4">
-          <p>
+          <p style="text-align: justify;">
             La paleta de color, la cree en base a los acordes cromáticos de Eva Geller auque,
              ella describe una infinidad de combinaciones, ninguno me servia de una manera concreta, 
              asi que en base a su teoria yo cree el mio que me  funcionara de una manera óptima.
@@ -105,7 +105,7 @@
       <div class="row justify-content-center align-items-center py-3">
       <div class="col-lg-9 col-md-5 col-sm-5">
         <h2>CONTEXTO</h2>
-        <p>
+        <p style="text-align: justify;">
              No recuerdo cuantos años tenía, pero era pequeña y estaba en la primaria, mi mamá siempre fue la
              mamá que llega tarde y yo naturalmente era la alumna que se quedaba hasta el final, en una ocasión
              en particular (cabe aclarar, al ser de primaria, los papas nos tenían que recoger en el salón,
@@ -177,7 +177,7 @@
         DESHUMANIZARTE
       </h2>
       <div class="row py-5 justify-content-center align-items-center">
-        <div class="col-lg-9 col-md-5 col-sm-5 pt-3">
+        <div class="col-lg-9 col-md-5 col-sm-5 pt-3" style="text-align: justify;">
           Anterior mente desarrolle un proyecto sobre la tecnología y el cuerpo humano, este proyecto, fue un 
           proyecto conjunto con Leonardo de Jesus Jimenez Montenegro, Hugo Erhubey Quintana Ledesma,
           Luis Gerardo López Beltrán,Dafne Sarahí Antúnez Montoya y Fátima Aradid Castañeda Gutiérrez.
@@ -208,7 +208,7 @@
             CONCLUSIÓN
           </h2>
           <br>
-          <p>
+          <p style="text-align: justify;">
             Actualmente la tecnología que gira en torno
             a estas modificaciones es sorprendente, hay
             tatuajes que pueden ser escaneados y llevar a
