--- a/blog.html
+++ b/blog.html
@@ -69,12 +69,21 @@
             <h2 style="text-align: center;">ARTISTA A CORAZON ABIERTO</h2>
             <br>
             <div class="row justify-content-center pt-3">
-                <div class="col-lg-8 col-md-4 col-sm-4">
+                <div class="col-lg-8 col-sm-5">
                   <p>
-                   Todos los artistas, de practicamente todos los ambitos, trabajamos con los sentimientos a
+                   Todos los artistas, practicamente de todos los ambitos, trabajamos con los sentimientos a
                    flor de piel, cuando un artista realiza una obra, en general, su obra no es solo material o
-                   digital, la obra de un artista, suele tener alma.
+                   digital, la obra de un artista, suele tener alma, un alma que grita un sentimiento, una 
+                   situación, una razón de ser. Un artista comunica, el arte es para muchos la voz que no puede
+                   salir de sus cuerpos, las ideas que se quedaron a medias, los amores no expresados, las lagrimas
+                   que no corrieron, las sonrisas que no vivimos, los besos que no dimos, los gritos que nos tragamos,
+                   la impotencia que sentimos, las experiencias de fantasía que solo existen en nuestro imaginario, etc.
                    <br>
+                   <br>
+                   Quiero señalar algo que me parece relevante, la empatia en uno mismo como <i>"creador de"</i> es clave
+                   <br>
+                   La empatia con uno mismo es clave
+                   <hr>
                     Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
                    esta página podras ver un poco más de mis trabajos.
 
