--- a/blog.html
+++ b/blog.html
@@ -80,9 +80,21 @@
                    la impotencia que sentimos, las experiencias de fantasía que solo existen en nuestro imaginario, etc.
                    <br>
                    <br>
-                   Quiero señalar algo que me parece relevante, la empatia en uno mismo como <i>"creador de"</i> es clave
+                   Quiero señalar algo que me parece relevante, <strong>la empatia en uno mismo como <i>"creador de"</i> es clave</strong> ,
+                   ya que, al vivir una situacion que te haga accionar para crear arte, lo vas a vivir de manera muy 
+                   intensa y por ejemplo, la felicidad en exceso suele entederse como algo "ridículo" y en el otro
+                   extremo, suele categorizarse como "romantico/ridículo" a la tristeza o dolor en demsía; Estas son
+                   sensaciones que  podemos experimentar nosotros al ser terceros a la experiencia en particular, estas 
+                   sentencias tambien las puede llegar a persar el artista mismo de su trabajo, por eso la empatía con
+                   uno mismo es importante como artistas, hay que saber respetar la intensidad que sentimos en el pasado,
+                   o en el presente, o a futuro, tenemos que tener la capacidad de mirarnos a nosotros mismos y a nuestro 
+                   trabajo sin juzgarnos severamente, este es un igrediente primoldial para la creación de una obra, ya que
+                   solamente  vas a experimentar una única vez algo que va a tracender, cuando estes creando, vas a re-vivir,
+                   re-vistar, re-pensar el mismo evento una y mil veces, y si no te tienes compasión a ti mismo, puede que 
+                   te autolimites en la expresión de, por verguenza o generar pena ajena, entonces por resperto al que 
+                   sintió, lo que sintió, como lo vivió hay que entenderlo sin juzgar, solo así, la obra podrá ser íntima y
+                   fiel a la experiencia per se.
                    <br>
-                   La empatia con uno mismo es clave
                    <hr>
                     Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
                    esta página podras ver un poco más de mis trabajos.
