--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
                    situación, una razón de ser. Un artista comunica, el arte es para muchos la voz que no puede
                    salir de sus cuerpos, las ideas que se quedaron a medias, los amores no expresados, las lagrimas
                    que no corrieron, las sonrisas que no vivimos, los besos que no dimos, los gritos que nos tragamos,
-                   la impotencia que sentimos, las experiencias de fantasía que solo existen en nuestro imaginario, etc.
+                   la impotencia que sentimos, persiguiendo la nostalgia impersonal, etc.
                    <br>
                    <br>
                    Quiero señalar algo que me parece relevante, <strong>la empatia en uno mismo como <i>"creador de"</i> es clave</strong> ,
