--- a/blog.html
+++ b/blog.html
@@ -83,21 +83,34 @@
                    Quiero señalar algo que me parece relevante, <strong>la empatia en uno mismo como <i>"creador de"</i> es clave</strong> ,
                    ya que, al vivir una situacion que te haga accionar para crear arte, lo vas a vivir de manera muy 
                    intensa y por ejemplo, la felicidad en exceso suele entederse como algo "ridículo" y en el otro
-                   extremo, suele categorizarse como "romantico/ridículo" a la tristeza o dolor en demsía; Estas son
+                   extremo, suele categorizarse como "romantico/ridículo" a la tristeza o dolor en demasía; Estas son
                    sensaciones que  podemos experimentar nosotros al ser terceros a la experiencia en particular, estas 
-                   sentencias tambien las puede llegar a persar el artista mismo de su trabajo, por eso la empatía con
-                   uno mismo es importante como artistas, hay que saber respetar la intensidad que sentimos en el pasado,
-                   o en el presente, o a futuro, tenemos que tener la capacidad de mirarnos a nosotros mismos y a nuestro 
-                   trabajo sin juzgarnos severamente, este es un igrediente primoldial para la creación de una obra, ya que
-                   solamente  vas a experimentar una única vez algo que va a tracender, cuando estes creando, vas a re-vivir,
+                   sentencias también las puede llegar a pensar el artista de su trabajo, por eso la empatía con
+                   uno mismo es importante, hay que saber respetar la intensidad que sentimos en el pasado,
+                   el presente, o futuro, tenemos que tener la capacidad de mirarnos a nosotros mismos y a nuestro 
+                   trabajo sin juzgarnos severamente, éste es un ingrediente primordial para la creación de una obra, ya que
+                   solamente  vas a experimentar una única vez algo que va a trascender, cuando estés creando, vas a re-vivir,
                    re-vistar, re-pensar el mismo evento una y mil veces, y si no te tienes compasión a ti mismo, puede que 
-                   te autolimites en la expresión de, por verguenza o generar pena ajena, entonces por resperto al que 
-                   sintió, lo que sintió, como lo vivió hay que entenderlo sin juzgar, solo así, la obra podrá ser íntima y
+                   te autolimites en la expresión de, por verguenza o generar pena ajena entonces, por respeto al que 
+                   sintió lo que sintió como lo vivió, hay que intentar entenderlo sin juzgar, solo así, la obra podrá ser íntima y
                    fiel a la experiencia per se.
                    <br>
+                   <br>
+                   Naturalmente, me cosidero una artista a corazon abierto, en la medida de lo posible, toda mi obra es
+                   extraida de  vivencias personales que dejaron una huella en mi alma, te preguntarás, ¿y si te contratan?
+                   no creo que puedas vivir un "encargo" de manera tan intensa, y efectivamente, mi respuesta para eso es que no,
+                   yo no voy a vivir con la misma fuerza un evento en el que se me contrató, peroa al ser como soy
+                   no solo lo voy a presenciar, lo voy a observar dandole la atención que se merece a cada detalle para los
+                   protagonistas, el objetivo siempre es encapsular un momento en el tiempo con todo lo que puede o no 
+                   representar, asi cuando se capture, va a dejar de ser tuyo, siempre va a ser por sí mismo, se volvera perene,
+                   y a nosotros solo nos queda saber que lo vivimos.
                    <hr>
-                    Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
-                   esta página podras ver un poco más de mis trabajos.
+                   <div style="text-align: center;">
+                   <img src="img/galeria/foto social/social7.jpg" alt="Ya no más" width="70%">
+                   </div>
+                   <br>
+                   <h6 style="text-align: right;"> <i>Artista a corazon abierto</i> - 2022</h6>
+            
 
                   </p>
                 </div>
