--- a/blog.html
+++ b/blog.html
@@ -96,20 +96,20 @@
                    fiel a la experiencia per se.
                    <br>
                    <br>
-                   Naturalmente, me cosidero una artista a corazon abierto, en la medida de lo posible, toda mi obra es
+                   Naturalmente, me cosidero una artista a corazón abierto, en la medida de lo posible, toda mi obra es
                    extraida de  vivencias personales que dejaron una huella en mi alma, te preguntarás, ¿y si te contratan?
                    no creo que puedas vivir un "encargo" de manera tan intensa, y efectivamente, mi respuesta para eso es que no,
-                   yo no voy a vivir con la misma fuerza un evento en el que se me contrató, peroa al ser como soy
-                   no solo lo voy a presenciar, lo voy a observar dandole la atención que se merece a cada detalle para los
+                   yo no voy a vivir con la misma fuerza un evento en el que se me contrató, pero al ser como soy
+                   no solo lo voy a presenciar, lo voy a observar dándole la atención que se merece a cada detalle para los
                    protagonistas, el objetivo siempre es encapsular un momento en el tiempo con todo lo que puede o no 
-                   representar, asi cuando se capture, va a dejar de ser tuyo, siempre va a ser por sí mismo, se volvera perene,
+                   representar, asi cuando se capture, va a dejar de ser tuyo, siempre va a ser por sí mismo, se volverá perene,
                    y a nosotros solo nos queda saber que lo vivimos.
                    <hr>
                    <div style="text-align: center;">
                    <img src="img/galeria/foto social/social7.jpg" alt="Ya no más" width="70%">
                    </div>
                    <br>
-                   <h6 style="text-align: right;"> <i>Artista a corazon abierto</i> - 2022</h6>
+                   <h6  style="text-align: right;"> <i>Artista a corazón abierto</i> - 2022</h6>
             
 
                   </p>
