--- a/index.html
+++ b/index.html
@@ -68,14 +68,24 @@
           <h2>UN POCO DE MI</h2>
           <div class="row justify-content-center pt-3">
             <div class="col-lg-8 col-md-4 col-sm-4">
-              <p>
-                Actualmente soy estudiante de artes digitales, pero desde muy pequeña
-                siempre me he sentido atraida por la fotografía,  y ahora que estoy estudiando
-                la universida mi mayor campo de interes es el mismo, la fotografía.
-              </p>
-              <p>
-                Ahora, en la universidad, mi mayor interes, es mi efoque profecional. En 
-                esta página podras ver un poco más de mis trabajos.
+              <p style="text-align: justify;">
+                Actualmente estoy por egresar de la carrera de artes digitales, pero desde muy pequeña
+                siempre me he sentido atraida por la fotografía, ahora que estoy por egresar mi atencion
+                profesional esta naturalmente orientada hacia la foto.
+                <br>
+                <br>
+                Aqui podrás ver un pedacito de mi trabajo, la fotogrfía fine art de estudio es mi area 
+                favorita ya que me deja experimentar con texturas, tecnicas, formas, luz, es un ámbto
+                en el que tengo el control de bastantes cosas y que me permite tener un mayor acercamiento
+                a la representación visual como artista que quiero exponer.
+                <br>
+                <br>
+                Otro de los campos que siempre me ha llamado la atencion es la fotografía de eventos, ya que 
+                en esta área solemos retratar emociones muy intensas, cuando nos dan la confianza de retratar
+                momentos imprtantes siempre debes tener por seguro que se va  a hacer todo lo posible y más
+                para sere fiel a lo que viviste, pensemos en  un partido imporante de futbol, el gol del triunfo
+                solo se va a meter una ves, o una boda, el beso también es único, congelar esos 
+                momentos, es lo mas bonito y retador que puede haber.
               </p>
             </div>
           </div>
