--- a/blog.html
+++ b/blog.html
@@ -96,14 +96,19 @@
                    fiel a la experiencia per se.
                    <br>
                    <br>
-                   Naturalmente, me cosidero una artista a corazón abierto, en la medida de lo posible, toda mi obra es
-                   extraida de  vivencias personales que dejaron una huella en mi alma, te preguntarás, ¿y si te contratan?
-                   no creo que puedas vivir un "encargo" de manera tan intensa, y efectivamente, mi respuesta para eso es que no,
-                   yo no voy a vivir con la misma fuerza un evento en el que se me contrató, pero al ser como soy
-                   no solo lo voy a presenciar, lo voy a observar dándole la atención que se merece a cada detalle para los
-                   protagonistas, el objetivo siempre es encapsular un momento en el tiempo con todo lo que puede o no 
-                   representar, asi cuando se capture, va a dejar de ser tuyo, siempre va a ser por sí mismo, se volverá perene,
-                   y a nosotros solo nos queda saber que lo vivimos.
+                   Naturalmente, me cosidero una artista a corazón abierto, pero trabajar con esa "sencibilidad" o "corazón"
+                   como quieras referirte a esta idea, opino que no demerita ni mi trabajo, ni el de los artistas que tengan
+                   la capacidad de crear obras bajo una encomienda o  con un tema a trabajar en específico, pero si creo 
+                   que al ver una obra se siente automaticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
+                   no significa que todo sea catártico, pero sí involucra una parte de ti, y no importa si fue para congelar un 
+                   momento de una noche o un problema de años, una inseguridad nueva, un amor fugaz, etc. Todo se vuelve válido y 
+                   preciado en el momento, cuando haces de estas experiencias algo ajeno a ti al encapsularlas fuera de tu cuerpo.
+                   <br>
+                   <br>
+                   Por ultimo quiero traer a la luz algo que todos sabemos pero no solemos reconocer, si un artista   se enamora de ti, vas a ser ETERNO, me explico, cuando nos enamoramos siempre lo vamos a guardar en 
+                   el corazón, independientemente si fue algo que duro 5 años, 3 meses, una noche o una mirada, si un artista
+                   llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre estrita en los 
+                   subtitulos.
                    <hr>
                    <div style="text-align: center;">
                    <img src="img/galeria/foto social/social7.jpg" alt="Ya no más" width="70%">
