--- a/blog.html
+++ b/blog.html
@@ -110,13 +110,17 @@
                    llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre estrita en los 
                    subtitulos.
                    <hr>
+                   Esta obra se titula "chocolate a baño maría" y como te imaginas, claro que tiene nombre y apellido, pero solo diré
+                   que alguien llego a mi vida con la fuerza del mar y se fue igual de fuerte, dejandome detrozada, pero yo no sabía eso, 
+                   yo disfruté y nade en su inmensidad, me empape de su alma mientras pude...
+                   <br>
+                   <br>
                    <div style="text-align: center;">
-                   <img src="img/galeria/foto social/social7.jpg" alt="Ya no más" width="70%">
+                   <img src="img/blog/Blog1.jpeg" alt="Chocolate a baño maria" width="70%">
                    </div>
                    <br>
-                   <h6  style="text-align: right;"> <i>Artista a corazón abierto</i> - 2022</h6>
-            
-
+                   <h6  style="text-align: right;"> <i>Chocolate a baño maría</i> - 2022</h6>
+                   <hr>          
                   </p>
                 </div>
             </div>
