--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
                    que al ver una obra se siente automaticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
                    no significa que todo sea catártico, pero sí involucra una parte de ti, y no importa si fue para congelar un 
                    momento de una noche o un problema de años, una inseguridad nueva, un amor fugaz, etc. Todo se vuelve válido y 
-                   preciado en el momento cuando haces de estas experiencias algo ajeno a ti al encapsularlas fuera de tu cuerpo.
+                   preciado en el momento cuando haces de estas experiencias algo ajeno y las encapsulas fuera de tu cuerpo.
                    <br>
                    <br>
                    Por ultimo quiero traer a la luz algo que todos sabemos pero no solemos reconocer, si un artista   se enamora de ti, vas a ser ETERNO, me explico, cuando nos enamoramos siempre lo vamos a guardar en 
