--- a/blog.html
+++ b/blog.html
@@ -110,9 +110,10 @@
                    llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre estrita en los 
                    subtitulos.
                    <hr>
-                   Esta obra se titula "chocolate a baño maría" y como te imaginas, claro que tiene nombre y apellido, pero solo diré
-                   que alguien entró a mi vida con la fuerza del mar y  así como llegó, se fue... Pero yo no sabía eso, 
-                   yo disfruté y nade en su inmensidad, me empape de su alma mientras pude.
+                   Esta obra se titula "chocolate a baño maría", claro que tiene nombre y apellido, pero solo diré
+                   que alguien entró en mi vida con la fuerza del mar y así como llegó, se fue... Yo sabía que se iría, 
+                   aún así, lo disfruté y nade en su inmensidad, me deje empapar de sus pensamientos y lo que me dejó conocer 
+                   de su alma, no fue eterno, pero este momento congelado sí.
                    <br>
                    <br>
                    <div style="text-align: center;">
