--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@
                    <br>
                    <br>
                    Por ultimo quiero traer a la luz algo que todos sabemos pero no solemos reconocer, si un artista   se enamora de ti, vas a ser ETERNO, me explico, cuando nos enamoramos siempre lo vamos a guardar en 
-                   el corazón, independientemente si fue algo que duro 5 años, 3 meses, una noche o una mirada, si un artista
+                   nuestro ser, independientemente si fue algo que duro 5 años, 3 meses, una noche o una mirada, si un artista
                    llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre estrita en los 
                    subtitulos.
                    <hr>
