--- a/blog.html
+++ b/blog.html
@@ -91,7 +91,7 @@
                    trabajo sin juzgarnos severamente, éste es un ingrediente primordial para la creación de una obra, ya que
                    solamente  vas a experimentar una única vez algo que va a trascender, cuando estés creando, vas a re-vivir,
                    re-vistar, re-pensar el mismo evento una y mil veces, y si no te tienes compasión a ti mismo, puede que 
-                   te autolimites en la expresión de, por verguenza o generar pena ajena entonces, por respeto al que 
+                   te autolimites en la expresión de, por verguenza o por no querer generar pena ajena entonces, por respeto al que 
                    sintió lo que sintió como lo vivió, hay que intentar entenderlo sin juzgar, solo así, la obra podrá ser íntima y
                    fiel a la experiencia per se.
                    <br>
@@ -99,15 +99,15 @@
                    Naturalmente, me cosidero una artista a corazón abierto, pero trabajar con esa "sencibilidad" o "corazón"
                    como quieras referirte a esta idea, opino que no demerita ni mi trabajo, ni el de los artistas que tengan
                    la capacidad de crear obras bajo una encomienda o  con un tema a trabajar en específico, pero si creo 
-                   que al ver una obra se siente automaticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
-                   no significa que todo sea catártico, pero sí involucra una parte de ti, y no importa si fue para congelar un 
+                   que al ver una obra se siente automáticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
+                   no significa que todo sea catártico, pero sí involucra externar una parte de ti, y no importa si fue para congelar un 
                    momento de una noche o un problema de años, una inseguridad nueva, un amor fugaz, etc. Todo se vuelve válido y 
                    preciado en el momento cuando haces de estas experiencias algo ajeno y las encapsulas fuera de tu cuerpo.
                    <br>
                    <br>
                    Por ultimo quiero traer a la luz algo que todos sabemos pero no solemos reconocer, si un artista   se enamora de ti, vas a ser ETERNO, me explico, cuando nos enamoramos siempre lo vamos a guardar en 
                    nuestro ser, independientemente si fue algo que duro 5 años, 3 meses, una noche o una mirada, si un artista
-                   llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre estrita en los 
+                   llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre escrita en los 
                    subtitulos.
                    <hr>
                    Esta obra se titula "chocolate a baño maría", claro que tiene nombre y apellido, pero solo diré
