--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
                    Por ultimo quiero traer a la luz algo que todos sabemos pero no solemos reconocer, si un artista   se enamora de ti, vas a ser ETERNO, me explico, cuando nos enamoramos siempre lo vamos a guardar en 
                    nuestro ser, independientemente si fue algo que duro 5 años, 3 meses, una noche o una mirada, si un artista
                    llega a sentir algo por ti, ten por seguro que al menos una obra de arte lleva tu nombre escrita en los 
-                   subtitulos y el arte nunca muere.
+                   subtitulos y al convertirte en arte nunca mueres.
                    <hr>
                    Esta obra se titula "chocolate a baño maría", claro que tiene nombre y apellido, pero solo diré
                    que alguien entró en mi vida con la fuerza del mar y así como llegó, se fue... Yo sabía que se iría, 
