--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,7 @@
             <div class="row justify-content-center pt-3">
                 <div class="col-lg-8 col-sm-5">
                   <p>
-                   Todos los artistas, practicamente de todos los ambitos, trabajamos con los sentimientos a
+                   Todos los artistas, practicamente en todos los ambitos, trabajamos con los sentimientos a
                    flor de piel, cuando un artista realiza una obra, en general, su obra no es solo material o
                    digital, la obra de un artista, suele tener alma, un alma que grita un sentimiento, una 
                    situación, una razón de ser. Un artista comunica, el arte es para muchos la voz que no puede
@@ -98,10 +98,10 @@
                    <br>
                    Naturalmente, me cosidero una artista a corazón abierto, pero trabajar con esa "sencibilidad" o "corazón"
                    como quieras referirte a esta idea, opino que no demerita ni mi trabajo, ni el de los artistas que tengan
-                   la capacidad de crear obras bajo una encomienda o  con un tema a trabajar en específico, pero si creo 
+                   la capacidad de crear obras bajo una encomienda o  con un tema a tratar en específico, pero si creo 
                    que al ver una obra se siente automáticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
                    no significa que todo sea catártico, pero sí involucra externar una parte de ti, y no importa si fue para congelar un 
-                   momento de una noche o un problema de años, una inseguridad nueva, un amor fugaz, etc. Todo se vuelve válido y 
+                   momento de una noche, un problema de años, una inseguridad nueva o un amor fugaz, etc. Todo se vuelve válido y 
                    preciado en el momento cuando haces de estas experiencias algo ajeno y las encapsulas fuera de tu cuerpo.
                    <br>
                    <br>
