--- a/proyectos.html
+++ b/proyectos.html
@@ -107,7 +107,7 @@
         <h2>CONTEXTO</h2>
         <p style="text-align: justify;">
              No recuerdo cuantos años tenía, pero era pequeña y estaba en la primaria, mi mamá siempre fue la
-             mamá que llega tarde y yo naturalmente era la alumna que se quedaba hasta el final, en una ocasión
+             mamá que llega tarde y yo por consecuencia era la alumna que se quedaba hasta el final, en una ocasión
              en particular (cabe aclarar, al ser de primaria, los papas nos tenían que recoger en el salón,
              no en la escuela, para que así hubiera menos “riesgo”), mi mama no llegaba, se iban todos mis 
              compañeros uno a uno y yo seguía sentada en el salón, me quede sola con la maestra, no recuerdo 
@@ -133,7 +133,7 @@
             para este puto yo ya  era más lagrimas que niña,  pasaron los minutos y el guardia me
             hizo el favor de cruzarme por la calle para intentar llamar desde el teléfono de
             la señora de la papelería de la esquina, tampoco funciono, pasaron los minutos y ya
-            no sabían que hacer conmigo, naturalmente y yo desarrolle una capacidad instantánea
+            no sabían que hacer conmigo, desarrolle una capacidad instantánea
             para imaginar todo lo malo que me iba a pasar por el resto de mi vida, vi mis sueños 
             caídos, me vi como vagabunda por no saber llegar a mi casa, vi cómo me corrían de la
             escuela por no pagar la mensualidad, vi cómo me quedaba abandonada y sola en un callejo 
@@ -143,17 +143,18 @@
             desesperación total. 
             <br>
             <br>
-            Llegaron las 6 de la tarde y no había nadie que abogara pos nosotros,
-            entonces, cuando llegaron las 6 y media, se me ocurrió la mejor idea del momento, llamar 
+            Llegaron las 6 de la tarde y no había nadie que abogara pos mi,
+            entonces, cuando llegaron las seis y media, se me ocurrió la mejor idea del momento, llamar 
             a mi casa, mi papá llegaba de trabajar a las 6:30 y pensé, no se me su número, pero si el
             de la casa, marcamos un par de veces después de esperar unos minutos y contesto mi papá, 
-            me escucho llorando y me dijo, ¿qué pasa, dónde estás? Y le dije que seguía en la escuela 
-            que mi mamá no llegaba le pregunte si estaba bien mi mama y me dijo que sí, que le marcó y
-            a él le dijo que estaba en el medico, me dijo, no te muevas voy por ti, los 30 minutos en
-             los que tardo en llagar por mí, fueron más que suficientes para sentirme no perdida, sino 
-             ignorada y abandonada por decisión propia de mi madre, de temer por su vida y la mía, pase 
-             a entender que nunca fui una prioridad para ella, llego mi papa y me llevo a la casa, 
-             cuando llego mi mamá lo único que me dijo fue “no sé porque te preocupas tanto”.
+            me escucho llorando y me dijo, ¿qué pasa, dónde estás? Y le dije que seguía en la escuela, 
+            que mi mamá no llegaba, le pregunté si estaba bien mi mama y me dijo que sí, que le marcó y
+            a él le dijo que estaba en el medico, no te muevas me dijo, voy por ti, los 30 minutos en
+            los que tardo en llagar por mí, fueron más que suficientes para sentirme no perdida, sino 
+            ignorada y abandonada por decisión propia de mi mamá; de temer por su vida y la mía, pasé 
+            a entender que nunca fui una prioridad para ella, no se molestó en levantar el teléfono, 
+            ni en marcar a la esuela para avisar... llegó mi papá y me llevo a la casa, 
+            cuando llego mi mamá lo único que me dijo fue “no sé porque te preocupas tanto”.
         </p>
       </div>
       </div>
