--- a/proyectos.html
+++ b/proyectos.html
@@ -146,7 +146,7 @@
             Llegaron las 6 de la tarde y no había nadie que abogara pos mi,
             entonces, cuando llegaron las seis y media, se me ocurrió la mejor idea del momento, llamar 
             a mi casa, mi papá llegaba de trabajar a las 6:30 y pensé, no se me su número, pero si el
-            de la casa, marcamos un par de veces después de esperar unos minutos contesto mi papá, 
+            de la casa, marcamos un par de veces y después de esperar unos minutos contesto mi papá, 
             me escucho llorando y me dijo, ¿qué pasa, dónde estás? Y le dije que seguía en la escuela, 
             que mi mamá no llegaba, le pregunté si estaba bien mi mama y me dijo que sí, que le marcó y
             a él le dijo que estaba en el medico, no te muevas me dijo, voy por ti, los 30 minutos en
