--- a/proyectos.html
+++ b/proyectos.html
@@ -88,13 +88,16 @@
              ella describe una infinidad de combinaciones, ninguno me servia de una manera concreta, 
              asi que en base a su teoria yo cree el mio que me  funcionara de una manera óptima.
              <br>
-             Para empezar, hablares un poco del azul y el negro, el azul por si solo puedeser interpretado
-              como pasividad, fialdad  y o espiritualidad y el negro, es lo duro, pero al juntar estos
+             <br>
+             Para empezar, hablaré un poco del azul y el negro, el azul por si solo puedeser interpretado
+              como pasividad, frialdad  y o espiritualidad y el negro, es lo duro, pero al juntar estos
               colores, se crea en la mente el concpeto de "lo inmenso".
+              <br>
               <br>
               En cuanto al rojo, por si mismo es lo cálido y cercano, pero al combinarlo con el negro, 
               se vuelve "lo agresivo, lo brutal",  el blanco con el gris, nos dan paso a lo inseguro y
               lo noble, por ultimo el rosa, es y sera aunque se combine, "lo delicado".
+              <br>
               <br>
               Una ves estos conceptos en mente, al combinarlos, tenemos "la brutalidad de lo inmenso contra 
               lo delicado" un acorde creomatico que nos habla de como algo inocente y noble puede ser 
@@ -182,6 +185,7 @@
           Anterior mente desarrolle un proyecto sobre la tecnología y el cuerpo humano, este proyecto, fue un 
           proyecto conjunto con Leonardo de Jesus Jimenez Montenegro, Hugo Erhubey Quintana Ledesma,
           Luis Gerardo López Beltrán,Dafne Sarahí Antúnez Montoya y Fátima Aradid Castañeda Gutiérrez.
+          <br>
           <br>
           En este proyecto mi aportacion fue la edicion y la toma de las siguientes dos fotografias, y de las 
           ultimas dos. solo hice la edicion, la ilustracion fue de Leonardo de Jesus
