--- a/blog.html
+++ b/blog.html
@@ -101,7 +101,7 @@
                    la capacidad de crear obras bajo una encomienda o  con un tema a tratar en específico, pero si creo 
                    que al ver una obra se siente automáticamente cuando tiene alma propia; tener los sentimientos a flor de piel 
                    no significa que todo sea catártico, pero sí involucra externar una parte de ti, y no importa si fue para congelar un 
-                   momento de una noche, un problema de años, una inseguridad nueva o un amor fugaz, etc. Todo se vuelve válido y 
+                   momento de una noche, un problema de años, una inseguridad nueva o un amor fugaz; Todo se vuelve válido y 
                    preciado en el momento cuando haces de estas experiencias algo ajeno y las encapsulas fuera de tu cuerpo.
                    <br>
                    <br>
