--- a/servicios.html
+++ b/servicios.html
@@ -196,17 +196,24 @@
           <div class="col-lg-6 px-3">
             <h2>CONTACTAME</h2>
             <p style="text-align: justify;">
-              Puede ser que no estes interesado en 
-              alguno de los paquetes que ofrezco, y 
+              Actualmente resido en Salamanca Gto. México, puede ser que no estes 
+              interesado en  alguno de los paquetes que ofrezco, y 
               es perfectamente valido, así como tambien puede ser
-              que quieras uno para ti unicamente, algo mas personalizado,
+              que quieras uno para ti unicamente, algo más personalizado,
               o alguno de los que tengo para ofrecer, de igual manera,
               por favor, escribeme un correo sí es que te interesa alguna
               de mis seciones, y asi nos podemos poner de acuerdo con mas detalle.
-
-              Gracias por darme la confianza de capturar un instante para ti
+              <br>
+              <br>
+              Gracias por darme la confianza de capturar un instante para ti.
             </p>
-          </div>
+            <hr>
+            <br>
+            <div style="text-align: center;">
+              <img src="img/servicios/ubi_sj.jpg" alt="Salamanca centro" width="80%" >
+            </div>
+            </div>
+           
           <!--formulario-->
           <div class="col-lg-6">
             <form id="Formulario"> 
